# FlexCode

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  README.org  pyproject.toml  setup.py  tox.ini
.github/workflows/: linting.yml  testing-and-coverage.yml
archive/: README.md  x_setup.py  x_tox.ini
docs/: conf.py  index.rst  requirements.txt
flexcode/: basis_functions.py  core.py  loss_functions.py  post_processing.py
src/flexcode/: __init__.py  basis_functions.py  core.py  helpers.py  loss_functions.py  post_processing.py  regression_models.py
tests/: context.py  test_cv_optim.py  test_examples.py  test_models_fit.py  test_params_handling.py  test_post_processing.py
tests/flexcode/: conftest.py  context.py  test_cv_optim.py  test_models_fit.py  test_params_handling.py  test_post_processing.py
tutorial/: Flexcode-tutorial-teddy.ipynb
vignettes/: Custom Class.ipynb  Model Save and Bumps Removal - Flexcode.ipynb
